--- a/style.css
+++ b/style.css
@@ -86,7 +86,6 @@ p {
   max-width: 500px;
   margin: 10px 0 20px 0;
   border: 1px solid var(--border-color);
-  border-radius: 8px;
   box-shadow: var(--shadow-sm);
   background: #f0f0f0;
   background-image: linear-gradient(45deg, #e0e0e0 25%, transparent 25%),
@@ -129,7 +128,7 @@ p {
 #playPauseBtn,
 #exportBtn,
 .filter-btn {
-  padding: 10px 18px;
+  padding: 12px 15px;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -191,7 +190,7 @@ p {
 
 .filter-btn {
   flex: initial;
-  padding: 8px 14px;
+  padding: 10px 15px;
   background: var(--bg-panel);
   border: 1px solid var(--border-color);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
@@ -221,17 +220,18 @@ p {
 
 #customFileInputLabel {
   display: block;
-  width: 100%;
+  width: 50%;
 
-  padding: 12px 18px;
+  padding: 15px 18px;
   font-size: 16px;
   font-weight: 700;
   font-family: "SF Pro Display Bold", sans-serif;
 
-  background: var(--primary-color);
-  color: white;
+  background: #f8f8f8;
+  color: var(--text-main);
+  border: 2px solid var(--border-color);
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 123, 255, 0.4);
+  box-shadow: var(--shadow-sm);
   text-align: left;
   cursor: pointer;
   transition: background 0.2s, transform 0.1s, box-shadow 0.2s;
@@ -241,9 +241,9 @@ p {
 }
 
 #customFileInputLabel:hover {
-  background: var(--primary-hover);
+  background: #f0f0f0;
   transform: translateY(-2px);
-  box-shadow: 0 6px 12px rgba(0, 123, 255, 0.5);
+  box-shadow: var(--shadow-md);
 }
 
 #editor-controls {
@@ -474,19 +474,23 @@ p {
 
   #player-panel,
   #editor-panel {
-    padding: 0 15px;
+    padding: 0 20px;
     overflow-y: visible;
     height: auto;
   }
 
   #anim {
     width: 95%;
-    margin: 15px auto;
+    margin: 2px auto 15px auto;
   }
 
   #controls {
     width: 95%;
     max-width: 300px;
+  }
+
+  #customFileInputLabel {
+    width: 100%;
   }
 
   #controls div {
