--- a/style.css
+++ b/style.css
@@ -378,7 +378,8 @@ input[type=range]::-webkit-slider-runnable-track {
 .danger-btn {
   background: #ef4444;
   box-shadow: 0 4px 6px rgba(239, 68, 68, 0.25);
-  padding: 6px 12px;
+  padding: 10px 12px;
+  margin-left: 5px;
   font-size: 0.8rem;
   flex: initial;
 }
